// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InfoScreen
    ctaLabel="label"
    heading="heading"
    onPress={[MockFunction]}
    subheading="subheading"
    type="fitbit"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          resizeMethod="scale"
          source={1}
          style={
            Object {
              "height": 80,
              "marginBottom": 64,
              "width": 320,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
              "marginBottom": 64,
            }
          }
        >
          heading
        </YuText>,
        <YuText
          style={
            Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
            }
          }
        >
          subheading
        </YuText>,
        <Button
          label="label"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": 80,
            }
          }
        />,
      ],
      "style": Object {
        "backgroundColor": "rgba(255,255,255,0.9)",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 48,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "scale",
          "source": 1,
          "style": Object {
            "height": 80,
            "marginBottom": 64,
            "width": 320,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "heading",
          "style": Object {
            "color": "#333333",
            "fontSize": 32,
            "lineHeight": 64,
            "marginBottom": 64,
          },
        },
        "ref": null,
        "rendered": "heading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "subheading",
          "style": Object {
            "color": "#333333",
            "fontSize": 32,
            "lineHeight": 64,
          },
        },
        "ref": null,
        "rendered": "subheading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "label",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": 80,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            resizeMethod="scale"
            source={1}
            style={
              Object {
                "height": 80,
                "marginBottom": 64,
                "width": 320,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "#333333",
                "fontSize": 32,
                "lineHeight": 64,
                "marginBottom": 64,
              }
            }
          >
            heading
          </YuText>,
          <YuText
            style={
              Object {
                "color": "#333333",
                "fontSize": 32,
                "lineHeight": 64,
              }
            }
          >
            subheading
          </YuText>,
          <Button
            label="label"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": 80,
              }
            }
          />,
        ],
        "style": Object {
          "backgroundColor": "rgba(255,255,255,0.9)",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 48,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "scale",
            "source": 1,
            "style": Object {
              "height": 80,
              "marginBottom": 64,
              "width": 320,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "heading",
            "style": Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
              "marginBottom": 64,
            },
          },
          "ref": null,
          "rendered": "heading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "subheading",
            "style": Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
            },
          },
          "ref": null,
          "rendered": "subheading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "label",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": 80,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`InfoScreen should render with garmin logo 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InfoScreen
    ctaLabel="label"
    heading="heading"
    onPress={[MockFunction]}
    subheading="subheading"
    type="garmin"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          resizeMethod="scale"
          source={1}
          style={
            Object {
              "height": 80,
              "marginBottom": 64,
              "width": 320,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
              "marginBottom": 64,
            }
          }
        >
          heading
        </YuText>,
        <YuText
          style={
            Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
            }
          }
        >
          subheading
        </YuText>,
        <Button
          label="label"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": 80,
            }
          }
        />,
      ],
      "style": Object {
        "backgroundColor": "rgba(255,255,255,0.9)",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 48,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "scale",
          "source": 1,
          "style": Object {
            "height": 80,
            "marginBottom": 64,
            "width": 320,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "heading",
          "style": Object {
            "color": "#333333",
            "fontSize": 32,
            "lineHeight": 64,
            "marginBottom": 64,
          },
        },
        "ref": null,
        "rendered": "heading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "subheading",
          "style": Object {
            "color": "#333333",
            "fontSize": 32,
            "lineHeight": 64,
          },
        },
        "ref": null,
        "rendered": "subheading",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "label",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": 80,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            resizeMethod="scale"
            source={1}
            style={
              Object {
                "height": 80,
                "marginBottom": 64,
                "width": 320,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "#333333",
                "fontSize": 32,
                "lineHeight": 64,
                "marginBottom": 64,
              }
            }
          >
            heading
          </YuText>,
          <YuText
            style={
              Object {
                "color": "#333333",
                "fontSize": 32,
                "lineHeight": 64,
              }
            }
          >
            subheading
          </YuText>,
          <Button
            label="label"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": 80,
              }
            }
          />,
        ],
        "style": Object {
          "backgroundColor": "rgba(255,255,255,0.9)",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 48,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "scale",
            "source": 1,
            "style": Object {
              "height": 80,
              "marginBottom": 64,
              "width": 320,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "heading",
            "style": Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
              "marginBottom": 64,
            },
          },
          "ref": null,
          "rendered": "heading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "subheading",
            "style": Object {
              "color": "#333333",
              "fontSize": 32,
              "lineHeight": 64,
            },
          },
          "ref": null,
          "rendered": "subheading",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "label",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": 80,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
